jack-trades-main/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jack-trades-frontend
  namespace: jack-trades-ns
  labels:
    app: jack-trades-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jack-trades-frontend
  template:
    metadata:
      labels:
        app: jack-trades-frontend
    spec:
      containers:
      - name: frontend
        image: public.ecr.aws/a9o4o2s3/jack-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: jack-trades-ns
  labels:
    app: jack-trades-frontend
spec:
  type: ClusterIP
  selector:
    app: jack-trades-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
