jack-trades-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jack-trades-ingress
  namespace: jack-trades-ns
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
